--- a/css/wordsearch.css
+++ b/css/wordsearch.css
@@ -3,7 +3,6 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  /* background: #6f00fc; */
   background: radial-gradient(circle at top, #1a2140, #0b0f1a);
   color: #fff;
   height: 100%;
@@ -11,11 +10,11 @@ body, html {
   flex-direction: column;
   align-items: center;
   font-family: 'Luckiest Guy', cursive;
-  /* background-image: url('../assets/bg.jpg'); */
 }
 
 main{
 	display: none;
+  position: fixed;
 }
 
 h1 {
