--- a/css/wordsearch.css
+++ b/css/wordsearch.css
@@ -13,6 +13,7 @@ body, html {
   position: fixed;
   top: 0;
   left: 0;
+  width: 100vw;
 }
 
 main{
@@ -170,7 +171,7 @@ h1 {
     justify-content: space-around;
     width: 90%;
     padding: 25px 15px;
-    font-size: 20px;
+    font-size: 15px;
     flex-wrap: wrap;
     text-align: center;
     margin-top: 50px;
@@ -201,9 +202,9 @@ h1 {
 }
 
 .main-container h4{
-	margin-top: 35px;
+	margin-top: 20px;
 	margin-bottom: 10px !important;
-	font-size: 23px;
+	font-size: 17px;
 }
 
 /* Word board container */
@@ -227,7 +228,7 @@ h1 {
   align-items: center;
   justify-content: center;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 17px;
   color: #fff;
   cursor: pointer;
   user-select: none;
