--- a/css/wordsearch.css
+++ b/css/wordsearch.css
@@ -228,7 +228,7 @@ h1 {
   align-items: center;
   justify-content: center;
   font-weight: bold;
-  font-size: 17px;
+  font-size: 15px;
   color: #fff;
   cursor: pointer;
   user-select: none;
@@ -255,9 +255,9 @@ h1 {
   border-radius: 4px;
   background: #222a44;
   color: #fff;
-  font-size: 17px;
+  font-size: 12px;
   text-align: center;
-  padding: 10px; 
+  padding: 4px; 
   border-radius: 20px;
 }
 
@@ -283,7 +283,7 @@ button:hover { background: #666; }
 
 /* Responsive tweaks */
 @media(max-width: 400px){
-  .cell{ font-size: 18px; padding: 5px; }
+  .cell{ font-size: 15px; }
   .wordItem{ font-size: 12px; }
   #wordlist{ width: 90vw; margin-bottom: 30px;}
   .top-bar { font-size: 16px; }
